background image sizing fix for remaining pages on mobile screens

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -189,7 +189,7 @@ footer {
 
 	.footer-distributed{
 		font: bold 14px sans-serif;
-		padding-right: 3.5rem;
+		padding-right: 4.5rem;
 	}
 
 	.footer-distributed .footer-left,
