--- a/src/pages/EmploymentPage/Employment.css
+++ b/src/pages/EmploymentPage/Employment.css
@@ -63,10 +63,12 @@ p {
 
 @media (max-width: 950px) {
     .employment {
-        background: url(../../pages/coverImages/application.jpg) no-repeat center center fixed;
-        background-size: cover;
-        height: auto; 
-        background-position-y: 40px;
+        background: url(../../pages/coverImages/application.jpg) no-repeat center center;
+        background-size: 950px 1000px;
+        -webkit-background-size: 950px 1000px;
+        -moz-background-size: 950px 1000px;
+        -o-background-size: 950px 1000px;
+        background-position-y: -150px;
         position: relative;
     }
 
