--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -134,11 +134,11 @@ p {
 @media screen and (max-width: 920px) {
     .main {
         background: url(../../pages/coverImages/uptownhope_bkgrd.png) no-repeat center center;
-        background-size: auto;
-        -webkit-background-size: auto;
-        -moz-background-size: auto;
-        -o-background-size: auto;
-        background-position-y: 40px;
+        background-size: 970px 1000px;
+        -webkit-background-size: 970px 1000px;
+        -moz-background-size: 970px 1000px;
+        -o-background-size: 970px 1000px;
+        background-position-y: 60px;
         position: relative;
     }
 
